# uaml

./: .gitignore  CHANGELOG.md  EULA.cs.md  EULA.md  LICENSE  NOTICE  README.md  customers.db  demo.db  focus_config.yaml  memory.db  memory.db-shm  memory.db-wal  memory_test.db  pyproject.toml  requirements.txt  run_portal.py  uaml.db  uaml_demo.db
data/: memory.db-shm  memory.db-wal
docs/: CERTIFICATION_GUIDE-cz.md  CERTIFICATION_GUIDE.md  DEPLOYMENT_TEST_REPORT-cz.md  DEPLOYMENT_TEST_REPORT.md  FRONTEND_DESIGN-cz.md  FRONTEND_DESIGN.md  billing-module-reference-cz.md  billing-module-reference.md  customer-portal-reference-cz.md  customer-portal-reference.md  federation-reference-cz.md  federation-reference.md  focus-engine-reference-cz.md  focus-engine-reference.md  gdpr-compliance-reference-cz.md  gdpr-compliance-reference.md  installation-guide-cz.md  installation-guide.md  installation-log-test-server-cz.md  installation-log-test-server.md  installation-log-web-server-cz.md  installation-log-web-server.md  io-reference-cz.md  io-reference.md  license-server-reference-cz.md  license-server-reference.md  licensing-reference-cz.md  licensing-reference.md  modules-reference-cz.md  modules-reference.md  recall-pipeline-deployment-cz.md  recall-pipeline-deployment.md  rest-api-reference-cz.md  rest-api-reference.md  security-configurator-cz.md  security-configurator.md  sync-engine-design-cz.md  sync-engine-design.md  task-claim-protocol-cz.md  task-claim-protocol.md
frontend/: index.html
systemd/: uaml-workspace-ingest.service  uaml-workspace-ingest.timer
tests/: test_access.py  test_analytics.py  test_api.py  test_api_client.py  test_asimov.py  test_associative.py  test_audit_stream.py  test_backup.py  test_batch.py  test_benchmark.py  test_cache.py  test_changelog.py  test_clustering.py  test_compliance.py  test_config.py  test_configurator.py  test_conflicts.py  test_consent.py  test_context.py  test_continuous.py  test_contradiction.py  test_customer.py  test_dedup.py  test_embeddings.py  test_entities.py  test_escrow.py  test_ethics.py  test_events.py  (+53 more)
(+199 files in other folders)
